--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
             </button>
             <div class ="collapse navbar-collapse" id="siteNavbar">
                 <ul class="navbar-nav ml-auto">
-                    <li class = "nav-item"><a class="nav-link" href="#"></a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Margin of Victory</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Covid Case Density</a></li>
+                    <li clas ="nav-item"><a class="nav-link" href="#">Covid Case Density vs Margin of Victory</a></li>
                 </ul>
             </div>
         </nav>
