--- a/index.html
+++ b/index.html
@@ -87,4 +87,10 @@
             </div>
         </nav>
     </header>
+    <footer class="page-footer">
+      <div class="footer-copyright text-center py-3">© 2020 Copyright: The Meme Men
+        </br>
+        <a href="#">About</a>
+      </div>
+    </footer>
 </section>
