sync local changes for nicolai end me clearly

--- a/rona-fraud/public/index.html
+++ b/rona-fraud/public/index.html
@@ -18,7 +18,7 @@
 <body>
     <section>
         <header>
-            <link rel="stylesheet" href="static/css/main.css">
+            <link rel="stylesheet" href="css/main.css">
             <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
             <nav class="navbar navbar-expand-md bg-dark navbar-dark">
                 <a class="navbar-bard" href="/" id="navBrand">
@@ -44,7 +44,7 @@
             </br>
             <a href="#">About</a>
         </div>
-        <script src="static/js/map.js"></script>
+        <script src="js/map.js"></script>
     </footer>
 <body>
 
