scrolling sidebar, assuming we want to go there

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
             <link rel="stylesheet" href="map.css">
             <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
             <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-                <a class="navbar-bard" href="/" id="navBrand">
+                <a class="navbar-bard" href="#" id="navBrand">
                     <img src="#" width="30" height="30" alt="Rona Fraud">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#siteNavbar">
@@ -29,24 +29,40 @@
                 </button>
                 <div class ="collapse navbar-collapse" id="siteNavbar">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item"><a class="nav-link" href="#">Margin of Victory</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Covid Case Density</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Covid Case Density vs Margin of Victory</a></li>
-			<li class="nav-item"><a class="nav-link" href="#">Hall of Shame</a></li> 
+                        <li class="nav-item"><a class="nav-link" href="#">About</a></li>
                     </ul>
                 </div>
             </nav>
         </header>
         </br>
-        <div id="map"></div>
-    </section>
-    <footer class="page-footer">
-        <div class="footer-copyright text-center py-3">© 2020 Copyright: The Meme Men
-            </br>
-            <a href="#">About</a>
+        <div class="sidenav">
+            <a href="#">Margin of Victory</a>
+            <a href="#">Covid Case Density</a>
+            <a href="#">Covid Case Density vs Margin of Victory</a>
+            <a href="#">Hall of Shame</a>
+            <a href="#">Hall of Shame</a>
+            <a href="#">Hall of Shame</a>
+            <a href="#">Hall of Shame</a>
+            <a href="#">Hall of Shame</a>
+            <a href="#">Hall of Shame</a>
+            <a href="#">Hall of Shame</a>
+            <a href="#">Hall of Shame</a>
+            <a href="#">Hall of Shame</a>
+            <a href="#">Hall of Shame</a>
+            <a href="#">Hall of Shame</a>
+            <a href="#">Hall of Shame</a>
+            <a href="#">Hall of Shame</a>
+            <a href="#">Hall of Shame</a>
+            <a href="#">Hall of Shame</a>
         </div>
-        <script src="map.js"></script>
-    </footer>
+        
+        <div id="map">
+        </div>
+        <footer>
+            <div id="botthing">
+                <p>© 2020 Copyright: The Meme Men</p>
+            </div>
+            <script src="js/map.js"></script>
+        </footer>
+    </section>
 <body>
-
-
