--- a/rona-election/static/about.html
+++ b/rona-election/static/about.html
@@ -18,7 +18,7 @@
 <body>
     <section>
         <header>
-            <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+            <link rel="stylesheet" href="style.css">
             <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
             <nav class="navbar navbar-expand-md">
                 <a class="navbar-bard" href="#" id="navBrand">
@@ -30,23 +30,12 @@
                 <div class ="collapse navbar-collapse" id="siteNavbar">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item"><a class="nav-link" href="#">Hall of Shame</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{{ url_for('static', filename='about.html') }}">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">About</a></li>
                     </ul>
                 </div>
             </nav>
         </header>
         </br>
-        <div class="sidenav">
-            <a href="#">Deaths at date</a>
-            <a href="#">Cases at date</a>
-            <a href="#">Deaths / 100k at date</a>
-            <a href="#">Cases / 100k at date</a>
-            <a href="#">Deaths / 100k at date v. Margin of Victory</a>
-            <a href="#">Cases / 100k at date v. Margin of Victory</a>
-        </div>
-
-        <div id="map">
-        </div>
         <footer>
             <div id="botthing">
                 <p>© 2020 Copyright: The Meme Men</p>
@@ -54,4 +43,4 @@
             <script src="{{ url_for('static', filename='map.js') }}"></script>
         </footer>
     </section>
-<body>
+</body>
