--- a/rona-election/static/about.html
+++ b/rona-election/static/about.html
@@ -38,11 +38,12 @@
         </br>
         <div class="container">
           <div class = "row">
-            <div class="col-lg-6 offset-lg-3">
+            <div class="col-lg-10 offset-lg-1">
               <center><h1><b>Rona Election</b></h1>
                 <br>
                 <h4>This is a data visualization of the margin of Biden's victory in the 2020 presidential election vs the number of covid cases/100K residents per county in the United States</h4>
                 <h4>We used data from <a href="https://usafacts.org/visualizations/coronavirus-covid-19-spread-map/">USAFacts</a> for the covid data, as well data from <a href="https://www.kaggle.com/unanimad/us-election-2020?select=president_county_candidate.csv">this</a> dataset for the election information</h4>
+                <h4>The calculation for determining the color of each county is performed by finding the margin of victory of Trump in a situation where if he won a county, the margin of victory is considered positive. We then found the number of positive covid tests per 100K residents in the county at today's date (using the latest available information), and determined a shade of the state by scaling a coorelation of these two values into a </h4>
               </center>
             </div>
           </div>
